# har-serde

./: pyproject.toml  tests.py
harf_serde/: harf_serde.py
